--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Web GDE Deck",
-  "name": "Web GDE Deck",
+  "short_name": "Android GDE Deck",
+  "name": "Android GDE Deck",
   "theme_color": "#1976d2",
   "background_color": "#1976d2",
   "icons": [
