Update Ataul Munim entry for latest android posts

--- a/src/public/data/config.json
+++ b/src/public/data/config.json
@@ -169,8 +169,8 @@
     },
     {
       "name": "Ataul Munim",
-      "href": "http://ataulm.com/",
-      "feedUrl": "http://ataulm.com/feed/"
+      "href": "https://www.novoda.com/blog/author/ataulm/",
+      "feedUrl": "https://www.novoda.com/blog/author/ataulm/rss/"
     },
     {
       "name": "Scott Alexander-Bown",
